Fix CORS: Use specific frontend URL instead of wildcard
- Change CORS allowedOrigins from '*' to specific frontend URL
- This is required when allowCredentials is true (cookies)
- Use FRONTEND_URL environment variable for CORS configuration
- Fixes cookie/session sharing between frontend and backend domains